main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }

  required_version = ">= 1.2.0"
}

provider "aws" {
  region = "eu-west-2"
}

resource "aws_security_group" "demo-sg" {
  name        = "sec-grp"
  description = "Allow HTTP and SSH traffic via Terraform"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "webserver" {
  ami           = "ami-0eb260c4d5475b901"
  instance_type = "t2.micro"
  key_name      = "iac-alura"
#  user_data = <<-EOF
#                #!/bin/bash
#                cd /home/ubuntu
#                echo “<h1>Feito com Terraform</h1>” > index.html
#                nohup busybox httpd -f -p 8080 &
#                EOF
  tags = {
    Name = "Teste Aws"
  }
}
